# nya-bot

./: .gitignore  Cargo.toml  Dockerfile  kovi.plugin.toml  template.kovi.conf.toml
.github/workflows/: docker.yml
.scripts/: .dockerignore  package.json  postbuild.ts
plugins/chat_message/src/: config.rs  ml.rs
plugins/chat_message/src/handlers/: group_chat.rs  tool.rs
plugins/kovi-plugin-bot-check/: Cargo.toml
plugins/kovi-plugin-bot-check/src/: config.rs  handle.rs  lib.rs
plugins/kovi-plugin-command-exec/src/: app.rs
plugins/kovi-plugin-dev-utils/src/: infodwd.rs  infoev.rs  lib.rs  msg.rs
plugins/kovi-plugin-dev-utils/src/config/: initfn.rs  mod.rs
plugins/kovi-plugin-emoji-attack/src/: app.rs  config.rs  handle.rs  lib.rs
plugins/kovi-plugin-javascript-shell/src/: shell.rs
plugins/kovi-plugin-qq-tools/: Cargo.toml
plugins/kovi-plugin-qq-tools/src/: commands.rs  config.rs  lib.rs
src/: main.rs
