[package]
name = "nya-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chat_message = { version = "0.1.0", path = "plugins/chat_message" }
kovi = "0.12.4"
kovi-plugin-check-alllong = { git = "https://github.com/RongDuJiKsp/check-all-long.git", branch = "update-0.12", version = "0.1.0" }
kovi-plugin-javascript-shell = { path = "plugins/kovi-plugin-javascript-shell" }
kovi-plugin-command-exec = { path = "plugins/kovi-plugin-command-exec" }
kovi-plugin-emoji-attack = { version = "0.1.0", path = "plugins/kovi-plugin-emoji-attack" }
kovi-plugin-bot-check = { version = "0.1.0", path = "plugins/kovi-plugin-bot-check" }
kovi-plugin-qq-tools = { version = "0.1.0", path = "plugins/kovi-plugin-qq-tools" }

[workspace]
members = ["plugins/chat_message", "plugins/kovi-plugin-bot-check", "plugins/kovi-plugin-command-exec", "plugins/kovi-plugin-dev-utils", "plugins/kovi-plugin-emoji-attack", "plugins/kovi-plugin-javascript-shell", "plugins/kovi-plugin-qq-tools"]

[workspace.dependencies]
kovi = "0.12.4"

