[package]
name = "kovi-plugin-bot-check"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
kovi-plugin-dev-utils = { path = "../kovi-plugin-dev-utils" }
kovi-plugin-command-exec = { path = "../kovi-plugin-command-exec" }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
regex = "1.11.1"
serde_with = "3.14.0"